--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#2d89ef" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link rel="stylesheet" href="style.css" />
 
     <title>Tinto Roastworks</title>
@@ -54,9 +81,9 @@
       </nav>
     </header>
 
-    <div id="showcase">
+    <div id="showcase" class="mb-5">
       <p>Tinto Roastworks</p>
-      <h1>Deilig kaffe med et formål</h1>
+      <h1>Life Changing Coffee</h1>
       <div>
         <button type="button" class="btn btn-outline-primary">
           Utforsk våre produkter
@@ -69,46 +96,28 @@
         <div class="md-col-11">
           <img class="img-fluid" src="assets/" alt="" />
         </div>
-        <div class="col-klasser-her text-center position-absolute herotext">
-          <h5>Ispusheren - Amager isbutik</h5>
+        <div class="text-center position-absolute herotext">
+          <h2>Ispusheren - Amager isbutik</h2>
         </div>
       </section>
 
       <section id="voresis" class="row">
-        <div class="col-klasser-her text-center mb-5">
-          <h2>Vores is - sortimentet</h2>
+        <div class="col-klasser-her text-center mb-5 mt-5">
+          <h3>Vores is - sortimentet</h3>
         </div>
-        <div class="col-md-6 text-center mb-5 col-lg-4 col-xl-2">
+        <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
           <img class="img-fluid" src="assets/MockUp_2.png" alt="" />
           <h4>Astronaut</h4>
           <p>14 DKK</p>
           <button type="button" class="btn btn-success btn-lg">Køb</button>
         </div>
-        <div class="col-md-6 text-center mb-5 col-lg-4 col-xl-2">
+        <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
           <img class="img-fluid" src="assets/MockUp_1.png" alt="" />
-          <h4>Chokoladeis</h4>
-          <p>32 DKK</p>
+          <h4>Finca Del Quindio</h4>
+          <p>299 DKK</p>
           <button type="button" class="btn btn-success btn-lg">Køb</button>
         </div>
-        <div class="col-md-6 text-center mb-5 col-lg-4 col-xl-2">
-          <img class="img-fluid" src="assets/MockUp_1.png" alt="" />
-          <h4>Flot, dyr is</h4>
-          <p>82 DKK</p>
-          <button type="button" class="btn btn-success btn-lg">Køb</button>
-        </div>
-        <div class="col-md-6 text-center mb-5 col-lg-4 col-xl-2">
-          <img class="img-fluid" src="assets/MockUp_1.png" alt="" />
-          <h4>Billig grim is</h4>
-          <p>6 DKK</p>
-          <button type="button" class="btn btn-success btn-lg">Køb</button>
-        </div>
-        <div class="col-md-6 text-center mb-5 col-lg-4 col-xl-2">
-          <img class="img-fluid" src="assets/MockUp_1.png" alt="" />
-          <h4>Væltet is</h4>
-          <p>12 DKK</p>
-          <button type="button" class="btn btn-success btn-lg">Køb</button>
-        </div>
-        <div class="col-md-6 text-center mb-5 col-lg-4 col-xl-2">
+        <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
           <img class="img-fluid" src="assets/MockUp_3.png" alt="" />
           <h4>Min yndling!</h4>
           <p>24 DKK</p>
@@ -117,10 +126,11 @@
       </section>
 
       <section id="tilbud" class="row">
-        <div class="col-klasser-her mb-4 mb-md-0 mb-lg-3">
+        <div class="col-klasser-her mb-4 mb-md-0 mb-lg-6">
           <h2>Aktuelle tilbud</h2>
         </div>
-        <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-3">
+        <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-6">
+          <img src="assets/Tinto-1.jpg" alt="Test" class="mb-4" />
           <h5>Dagens tilbud</h5>
           <p>Du kan få en portion flødeskum med ved køb af en kæmpe is.</p>
           <button
@@ -130,7 +140,8 @@
             Køb nu
           </button>
         </div>
-        <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-3">
+        <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-6">
+          <img src="assets/Tinto-2.jpg" alt="Test" class="mb-4" />
           <h5>Ugens tilbud</h5>
           <p>Denne uge kan du få en øl-is.</p>
           <button
@@ -140,42 +151,18 @@
             Køb nu
           </button>
         </div>
-        <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-3">
-          <h5>Månedens tilbud</h5>
-          <p>Vinteris - meget varm. Smager lidt af mormor-cacao.</p>
-          <button
-            type="button"
-            class="btn btn-warning btn-sm col-md-12 mt-md-auto"
-          >
-            Køb nu
-          </button>
-        </div>
-        <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-3">
-          <h5>Medlemstilbud</h5>
-          <p>Købe en is - og få en gratis</p>
-          <button
-            type="button"
-            class="btn btn-warning btn-sm col-md-12 mt-md-auto"
-          >
-            Køb nu
-          </button>
-        </div>
-      </section>
-
-      <section id="omos" class="row">
-        <div class="col-klasser-her">
-          <h2>Vi holder til på Amager</h2>
-        </div>
-        <div class="col-klasser-her">
-          <p>Og vores is kan købes gennem Kalles kaffe. Check vores lokaler:</p>
-        </div>
-        <div class="col-klasser-her">
-          <h2>
-            <img class="img-fluid" src="imgs/iskiosk.jpg" alt="iskiosk" />
-          </h2>
-        </div>
       </section>
     </main>
+
+    <section id="footer">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#003087"
+          fill-opacity="1"
+          d="M0,160L60,170.7C120,181,240,203,360,186.7C480,171,600,117,720,133.3C840,149,960,235,1080,261.3C1200,288,1320,256,1380,240L1440,224L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
 
     <!-- slut på indhold -->
 
