--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       href="favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
-    <meta name="msapplication-TileColor" content="#2d89ef" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#f4f2e2" />
+    <meta name="theme-color" content="#ff0000" />
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Tinto Roastworks</title>
+    <title>Life Changing Coffee!</title>
   </head>
 
   <body>
