--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
       <p>Tinto Roastworks</p>
       <h1>Life Changing Coffee</h1>
       <div>
-        <button type="button" class="btn btn-outline-primary">
-          Utforsk våre produkter
-        </button>
+        <a href="#produkter">
+          <button type="button" class="btn btn-outline-primary">
+            Utforsk våre produkter
+          </button>
+        </a>
       </div>
     </div>
 
@@ -150,16 +152,24 @@
         </div>
         <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-6">
           <img src="assets/Tinto-1.jpg" alt="Test" class="mb-4" />
-          <h5>Dagens tilbud</h5>
-          <p>Du kan få en portion flødeskum med ved køb af en kæmpe is.</p>
+          <h5>En bæredyktig policy</h5>
+          <p>
+            Vi tilbyr det danske folk Colombias fineste kaffebønner hvor alt
+            overskuddet går til mindre kaffegårder i det landlige Colombia. Fra
+            der kommer navnet "Life Changing Coffee".
+          </p>
           <button type="button" class="myButton btn-sm col-md-12 mt-md-auto">
             Utforsk mer
           </button>
         </div>
         <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-6">
           <img src="assets/Tinto-2.jpg" alt="Test" class="mb-4" />
-          <h5>Ugens tilbud</h5>
-          <p>Denne uge kan du få en øl-is.</p>
+          <h5>Kanskje verdens beste kaffe</h5>
+          <p>
+            Vi lager det vi mener er verdens beste kaffe! Med eksotiske smaker
+            og en etisk produksjon vet vi at kaffen er god for smaksløkene og
+            samvittigheten.
+          </p>
           <button type="button" class="myButton btn-sm col-md-12 mt-md-auto">
             Utforsk mer
           </button>
@@ -170,7 +180,7 @@
           <path
             fill="#ffcd00"
             fill-opacity="1"
-            d="M0,192L34.3,165.3C68.6,139,137,85,206,96C274.3,107,343,181,411,213.3C480,245,549,235,617,202.7C685.7,171,754,117,823,112C891.4,107,960,149,1029,165.3C1097.1,181,1166,171,1234,138.7C1302.9,107,1371,53,1406,26.7L1440,0L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
+            d="M0,160L80,160C160,160,320,160,480,144C640,128,800,96,960,96C1120,96,1280,128,1360,144L1440,160L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
           ></path>
         </svg>
       </div>
