--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
       href="favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
+
+    <!-- Primary Meta Tags -->
+    <title>Life Changing Coffee!</title>
+    <meta name="title" content="Life Changing Coffee!" />
+    <meta
+      name="description"
+      content="Kaffen som faktisk er livsendrende! Ikke nok med det så smaker den også fantastisk, utforsk vårt sortiment nå"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ramdahl.dk/tintoroastworks/" />
+    <meta property="og:title" content="Life Changing Coffee!" />
+    <meta
+      property="og:description"
+      content="Kaffen som faktisk er livsendrende! Ikke nok med det så smaker den også fantastisk, utforsk vårt sortiment nå"
+    />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://ramdahl.dk/tintoroastworks/"
+    />
+    <meta property="twitter:title" content="Life Changing Coffee!" />
+    <meta
+      property="twitter:description"
+      content="Kaffen som faktisk er livsendrende! Ikke nok med det så smaker den også fantastisk, utforsk vårt sortiment nå"
+    />
+    <meta property="twitter:image" content="" />
+
     <meta name="msapplication-TileColor" content="#f4f2e2" />
     <meta name="theme-color" content="#ff0000" />
 
@@ -46,12 +78,12 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-xl navbar-light bg-light">
+      <nav class="navbar navbar-expand-xl navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
               class="img-fluid"
-              src="/assets/Tinto_Coffee_Logo_Logo.png"
+              src="./assets/Tinto_Logo_Sort.png"
               alt="Tinto Coffee Logo"
             />
           </a>
@@ -108,8 +140,13 @@
             "Våre bønner er litt dyrere, for at våre bønder kan overleve."
           </h2>
         </div>
+        <div class="filandia"></div>
         <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="assets/CafeDeAndresa_2.png" alt="" />
+          <img
+            class="img-fluid"
+            src="assets/CafeDeAndresa_2.png"
+            alt="CafeDeAndresa"
+          />
           <h4>Café De Andérsa</h4>
           <p>En spennende mix for deg som ønsker å utfordre smaksløkene.</p>
           <p>249 DKK</p>
@@ -118,7 +155,11 @@
           </button>
         </div>
         <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="assets/FincaDelQuindio_1.png" alt="" />
+          <img
+            class="img-fluid"
+            src="assets/FincaDelQuindio_1.png"
+            alt="FincaDelQuindio"
+          />
           <h4>Finca Del Quindio</h4>
           <p>En ren kaffebønneblanding med en deilig, eksotisk fruktsmak.</p>
           <p>249 DKK</p>
@@ -127,7 +168,11 @@
           </button>
         </div>
         <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
-          <img class="img-fluid" src="assets/BigoteDePablo_3.png" alt="" />
+          <img
+            class="img-fluid"
+            src="assets/BigoteDePablo_3.png"
+            alt="BigoteDePablo"
+          />
           <h4>Bigote De Pablo</h4>
           <p>Colombiansk favoritt. Søt og fruktig med en blomsterlig aroma.</p>
           <p>249 DKK</p>
@@ -139,7 +184,7 @@
       <div class="spacer">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
           <path
-            fill="#ffcd00"
+            fill="#eacccd"
             fill-opacity="1"
             d="M0,160L60,170.7C120,181,240,203,360,186.7C480,171,600,117,720,133.3C840,149,960,235,1080,261.3C1200,288,1320,256,1380,240L1440,224L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
           ></path>
@@ -178,12 +223,39 @@
       <div class="spacer2">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
           <path
-            fill="#ffcd00"
+            fill="#eacccd"
             fill-opacity="1"
             d="M0,160L80,160C160,160,320,160,480,144C640,128,800,96,960,96C1120,96,1280,128,1360,144L1440,160L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"
           ></path>
         </svg>
       </div>
+
+      <section class="colombia">
+        <div class="infografikk">
+          <img src="assets/filandia.png" alt="Kart over Colombia" />
+        </div>
+        <h5 class="text-center">
+          Tinto Roastworks har et tett samarbeid med Finca Del Quindio gården
+          utenfor Filandia i Colombia. De er en av mange gårder i Colombia som
+          sliter på grunn av klima-endringene forårsaket av industrilandene. Det
+          som tidligere var det gunstige stedet for å dyrke kaffe er nå truet av
+          stigende temperaturer. Derfor ønsker vi å tilby det danske folk
+          Colombias fineste kaffebønner hvor alt overskuddet går til mindre
+          kaffegårder i det landlige Colombia.
+        </h5>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1440 320"
+          class="spacer3"
+        >
+          <path
+            fill="#191102"
+            fill-opacity="1"
+            d="M0,224L48,229.3C96,235,192,245,288,256C384,267,480,277,576,266.7C672,256,768,224,864,213.3C960,203,1056,213,1152,224C1248,235,1344,245,1392,250.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+          ></path>
+        </svg>
+      </section>
 
       <section id="informasjon" class="row">
         <div class="sk-instagram-feed" data-embed-id="67651"></div>
@@ -203,9 +275,68 @@
           d="M0,160L60,170.7C120,181,240,203,360,186.7C480,171,600,117,720,133.3C840,149,960,235,1080,261.3C1200,288,1320,256,1380,240L1440,224L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
         ></path>
       </svg>
-
-      <h3>Besøk vår Instagram</h3>
     </section>
+
+    <footer class="text-center footer">
+      <!-- Grid container -->
+      <div class="container p-4 pb-0">
+        <!-- Section: Form -->
+        <section class="">
+          <form action="">
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <!--Grid column-->
+              <div class="col-auto">
+                <p class="pt-2 text-light">
+                  <strong>Abonnér på vårt nyhetsbrev</strong>
+                </p>
+              </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-md-5 col-12">
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input
+                    type="email"
+                    id="form5Example27"
+                    class="form-control"
+                  />
+                  <label class="form-label text-light" for="form5Example27"
+                    >Email-addresse</label
+                  >
+                </div>
+              </div>
+              <!--Grid column-->
+
+              <!--Grid column-->
+              <div class="col-auto">
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary mb-4 myButton">
+                  Abonnér
+                </button>
+              </div>
+              <!--Grid column-->
+            </div>
+            <!--Grid row-->
+          </form>
+        </section>
+        <!-- Section: Form -->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div
+        class="text-center p-3 text-light"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+      >
+        © 2021 Copyright:
+        <a class="text-light" href="https://www.linkedin.com/in/marius-ramdahl/"
+          >Marius Ramdahl</a
+        >
+      </div>
+      <!-- Copyright -->
+    </footer>
 
     <!-- slut på indhold -->
 
