--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <a class="navbar-brand" href="index.html">
             <img
               class="img-fluid"
-              src="./assets/Tinto_Logo_Sort.png"
+              src="./asset/Tinto_Logo_Sort.webp"
               alt="Tinto Coffee Logo"
             />
           </a>
@@ -107,7 +107,13 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://vg.no">Om Oss</a>
+                <a class="nav-link" href="#tilbud">Om Oss</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#informasjon">Sosiale Medier</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#footer">Nyhetsbrev</a>
               </li>
             </ul>
           </div>
@@ -144,7 +150,7 @@
         <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
           <img
             class="img-fluid"
-            src="assets/CafeDeAndresa_2.png"
+            src="asset/CafeDeAndresa_2.webp"
             alt="CafeDeAndresa"
           />
           <h4>Café De Andérsa</h4>
@@ -157,7 +163,7 @@
         <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
           <img
             class="img-fluid"
-            src="assets/FincaDelQuindio_1.png"
+            src="asset/FincaDelQuindio_1.webp"
             alt="FincaDelQuindio"
           />
           <h4>Finca Del Quindio</h4>
@@ -170,7 +176,7 @@
         <div class="col-md-4 text-center mb-5 col-lg-4 col-xl-4">
           <img
             class="img-fluid"
-            src="assets/BigoteDePablo_3.png"
+            src="asset/BigoteDePablo_3.webp"
             alt="BigoteDePablo"
           />
           <h4>Bigote De Pablo</h4>
@@ -196,7 +202,7 @@
           <h2>Våre hjertesaker</h2>
         </div>
         <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-6">
-          <img src="assets/Tinto-1.jpg" alt="Test" class="mb-4" />
+          <img src="asset/Tinto-1.webp" alt="Plantasjearbeider" class="mb-4" />
           <h5>En bæredyktig policy</h5>
           <p>
             Vi tilbyr det danske folk Colombias fineste kaffebønner hvor alt
@@ -208,7 +214,7 @@
           </button>
         </div>
         <div class="col-md-6 mb-4 d-md-flex flex-md-column col-lg-6">
-          <img src="assets/Tinto-2.jpg" alt="Test" class="mb-4" />
+          <img src="asset/Tinto-2.webp" alt="Venner" class="mb-4" />
           <h5>Kanskje verdens beste kaffe</h5>
           <p>
             Vi lager det vi mener er verdens beste kaffe! Med eksotiske smaker
@@ -232,7 +238,7 @@
 
       <section class="colombia">
         <div class="infografikk">
-          <img src="assets/filandia.png" alt="Kart over Colombia" />
+          <img src="asset/filandia.png" alt="Kart over Colombia" />
         </div>
         <h5 class="text-center">
           Tinto Roastworks har et tett samarbeid med Finca Del Quindio gården
